Fixed alignment of images

--- a/style.css
+++ b/style.css
@@ -1,20 +1,26 @@
 body {
-    background-color: rgb(254, 211, 113);
+    /* background-color: rgb(254, 211, 113); */
+    background-color: white;
+    font-family: 'Lora', serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .logo {
     border-radius: 50%;
-    max-width: 10%;
-    max-height: 10%;
+    width: 5rem;
+    height: 5rem;
     padding: 15px;
 }
 
-/* .banner {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.banner {
+    text-align: center;
+}
+div.banner img {
+    width: 100%;
 }
 
-.banner img {
-    flex-shrink: 4;
-} */
+div.banner img.profile_photo {
+    border-radius: 50%;
+    width: 50%;
+}
+
